--- a/js-aparecida-nutri-2-tds--main/css/index.css
+++ b/js-aparecida-nutri-2-tds--main/css/index.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
  }
 
+.paciente-invalido{
+	background-color: lightcoral;
+}
+
 body{
 	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 	font-size: 14px;
@@ -132,3 +136,5 @@ button[disabled=disabled], button:disabled {
 .campo-invalido{
 	border: 1px solid red;
 }
+
+
